fix: reset ul/ol list-style and spacing-2

--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 @import "_reset.css";
+/* ¶r≈È */
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap");
+
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -47,8 +50,6 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-/* ¶r≈È */
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap");
 
 *,
 *::after,
@@ -61,7 +62,7 @@ img {
 }
 body {
   background-color: #fbfbfb;
-  font-family: "Noto Sans TC", sans-serif;
+  font-family: "Noto Sans TC", sans-serif !important;
 }
 
 .wrap {
